syntax = "proto3";

package wallet;

service WalletService {
  rpc CreateWallet(CreateWalletRequest) returns (WalletResponse);
  rpc GetWalletByUserId(GetWalletByUserIdRequest) returns (WalletResponse);
  rpc CreateTransaction(CreateTransactionRequest) returns (TransactionResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (TransactionsResponse);
  rpc GetBalance(GetBalanceRequest) returns (BalanceResponse);
}

message Wallet {
  string id = 1;
  string user_id = 2;
  int64 balance = 3;
  string created_at = 4;
  string updated_at = 5;
}

message Transaction {
  string id = 1;
  string wallet_id = 2;
  int64 amount = 3;
  string type = 4;
  string description = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateWalletRequest {
  string user_id = 1;
}

message CreateTransactionRequest {
  string wallet_id = 1;
  int64 amount = 2;
  string type = 3;
  string description = 4;
}

message GetWalletByUserIdRequest {
  string user_id = 1;
}

message GetTransactionsRequest {
  string wallet_id = 1;
}

message GetBalanceRequest {
  string wallet_id = 1;
}

message WalletResponse {
  Wallet wallet = 1;
  string message = 2;
}

message TransactionResponse {
  Transaction transaction = 1;
  string message = 2;
}

message TransactionsResponse {
  repeated Transaction transactions = 1;
  string message = 2;
}

message BalanceResponse {
  int64 balance = 1;
  string message = 2;
}
